# LangChain-OpenTutorial

./: .env_sample  .envsample  .gitignore  04_ConversationEntityMemory.ipynb  CODE_OF_CONDUCT.md  LICENCE.txt  README.md  Word-Loader.ipynb  pyproject.toml  requirements.txt  test.ipynb
.github/: PULL_REQUEST_TEMPLATE.md
01-BASIC/: 01-Getting-Started-Windows.ipynb  01-follow-the-installation-video-windows.ipynb  01. Follow the Installation Video_Mac.ipynb  01. Follow the Installation Video_Windows.ipynb  02-Getting-Started-Mac.ipynb  02-OpenAIAPIKeyGeneration.ipynb  03-LangSmithTrackingSetup.ipynb  04.UsingOpenaiAPI_GPT4o.ipynb  05-LCELLangChain Expression Language(LCEL).Ipynb  05-LangChain Expression Language(LCEL).ipynb  05-Runnable.ipynb  05-Using-OpenAIAPI-MultiModal.ipynb  05.LCEL.ipynb  06-LCELInterface.ipynb  06-LangChain-Expression-Language(LCEL).ipynb  07-LCEL-Interface.ipynb  07-Runnable.ipynb  09-FewShotTemplates.ipynb
01-Basic/: 01-Getting-Started-Windows.ipynb  01-follow-the-installation-video-windows.ipynb  02-Getting-Started-Mac.ipynb  02-OpenAIAPIKeyGeneration.ipynb  03-LangSmithTrackingSetup.ipynb  03-OpenAIAPI-Key-Generation.ipynb  03-OpenAIAPIKeyGeneration.ipynb  04-LangSmith-Tracking-Setup.ipynb  04-LangSmithTrackingSetup.ipynb  04-Using-OpenAIAPI-MultiModal.ipynb  05-LangChain Expression Language(LCEL).ipynb  05-LangChain-Expression-Language(LCEL).ipynb  05-Runnable.ipynb  05-Using-OpenAIAPI-MultiModal.ipynb  06-LCELInterface.ipynb  06-LangChain-Expression-Language(LCEL).ipynb  07-LCEL-Interface.ipynb  08-Runnable.ipynb  09-FewShotTemplates.ipynb
02-PROMPT/: 01-PromptTemplate.ipynb  02-FewShotPromptTemplate.ipynb  03-LangChain Hub.ipynb  04-PersonalPrompts 2.ipynb  04-PersonalPrompts.ipynb  04_Personal_Prompts.ipynb  09-FewShotPromptTemplate.ipynb  09-FewShotTemplates.ipynb
02-Prompt/: 01-PromptTemplate.ipynb  02-FewShotPromptTemplate.ipynb  03-LangChain Hub.ipynb  03-LangChain-Hub.ipynb  03-LangChainHub.ipynb  04-PersonalPrompts.ipynb  09-FewShotPromptTemplate.ipynb
03-OutputParser/: 01-PydanticOuputParser.ipynb  01-PydanticOutputParser.ipynb  02-CommaSeparatedListOutputParser.ipynb  03-StructuredOutputParser.ipynb  04-JsonOutputParser.ipynb  05-PandasDataFrameOutputParser.ipynb  06-DatetimeOutputParser.ipynb  07-EnumOutputParser.ipynb  08-OutputFixingParser.ipynb
04-MODEL/: 00-Models.ipynb  01-Chat-Models.ipynb  01-ChatModels.ipynb  02-Cache.ipynb  (+11 more)
04-MODEL /:  08-HuggingFace-Pipelines.ipynb
(+310 files in other folders)
