[tool.poetry]
name = "langchain-opentutorial"
version = "0.0.1"
description = "LangChain OpenTutorial for Everyone."
authors = ["LangChain OpenTutorial <langchain.opentutorial@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.x"
python-dotenv = "^1.0.1"

# LangChain
langchain = "^0.3.13"
langgraph = "^0.2.60"
langchain-openai = "^0.2.14"
langchain-ollama = "^0.2.2"
langchain-anthropic = "^0.3.1"
langchain-upstage = "^0.4.0"
langchain-cohere = "^0.3.4"
langchain-milvus = "^0.1.7"
langchain-google-genai = "^2.0.7"
langchain-huggingface = "^0.1.2"
langchain-together = "^0.2.0"

# Vector Store
faiss-cpu = "^1.9.0.post1"

# Evaluation
ragas = "^0.2.9"

# Jupyter
jupyter = "^1.1.1"
notebook = "^7.3.2"
jq = "^1.8.0"

# Loaders
unstructured = {extras = ["pdf"], version = "^0.16.11"}
markitdown = "^0.0.1a3"
arxiv = "^2.1.3"
pymupdf = "^1.25.1"
rapidocr-onnxruntime = "^1.4.3"
pypdf = "4.3.1"

# Parsers
llama-index-core = "^0.12.10"
llama-parse = "^0.5.19"

# Others
chardet = "^5.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
