[tool.poetry]
name = "langchain-opentutorial"
version = "0.0.1"
description = "LangChain OpenTutorial for Everyone."
authors = ["LangChain OpenTutorial <langchain.opentutorial@gmail.com>"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
python-dotenv = "1.0.1"
langchain = "0.3.13"
langgraph = "0.2.60"
langchain-openai = "0.2.14"
langchain-ollama = "0.2.2"
langchain-anthropic = "0.3.1"
langchain-upstage = "0.4.0"
langchain-cohere = "0.3.4"
langchain-milvus = "0.1.7"
langchain-google-genai = "2.0.7"
langchain-huggingface = "0.1.2"
langchain-together = "0.2.0"
faiss-cpu = "1.9.0.post1"
ragas = "0.2.9"
jupyter = "1.1.1"
notebook = "7.3.2"
chardet = "5.2.0"
markitdown = "0.0.1a3"
pypdf = "4.3.1"
llama-index-core = "0.11.23"
llama-parse = "0.5.19"
llama-index-readers-file = "0.2.2"
arxiv = "^2.1.3"
pymupdf = "^1.25.1"
neo4j = "^5.27.0"
langchain-neo4j = "^0.2.0"
langchain-mongodb = "^0.3.0"
certifi = "^2024.12.14"
python-magic-bin = "^0.4.14"
pymongo = "^4.10.1"
langchain-qdrant = "^0.2.0"
chromadb = "^0.6.2"
pyalex = "^0.15.1"
pdfplumber = "^0.11.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

